@@ -5,7 +5,8 @@ changes relative to sbcl-1.3.7:
     on platforms supporting stack allocation of vectors.
   * optimization: improved type derivation for FIND, POSITION, COUNT, SEARCH,
     MISMATCH and other array and sequence functions.
-  * optimization: allocate-instance is now as fast as make-instance.
+  * optimization: ALLOCATE-INSTANCE is now as fast as MAKE-INSTANCE.
+  * optimization: more efficient CHANGE-CLASS.
 
 changes in sbcl-1.3.7 relative to sbcl-1.3.6:
   * bug fix: preserve the name of the destructive function for the destroyed
